[ALPS03654198] ftrace:ftrace migration
sync configuration, It is for MTK debug log.

MTK-Commit-Id: ce284a1e2fd8bf98282cc3700793d8445c9219c3

Change-Id: I786bb4c41ad12136de572c0d5cea10002d57ba67
CR-Id: ALPS03654198
Feature: System Performance
Signed-off-by: Andress Kuo <andress.kuo@mediatek.com>

--- a/kernel/configs/eng.config
+++ b/kernel/configs/eng.config
@@ -32,3 +32,5 @@ CONFIG_KPROBES=y
 CONFIG_GCOV_KERNEL=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
+CONFIG_MTK_FTRACER=y
+CONFIG_MTK_FTRACE_DEFAULT_ENABLE=y
