--- a/kernel/configs/userdebug.config
+++ b/kernel/configs/userdebug.config
@@ -3,3 +3,4 @@ CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_PAGE_OWNER=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
+CONFIG_MTK_FTRACER=y
