ARM: dts: msm: Add PRNG node
Add PRNG node.

Change-Id: I1fd60c7e5f239c8f9eae05adce748da65bd46b62

--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -2097,6 +2097,13 @@
 		};
 	};
 
+	qcom_rng: qrng@10c3000 {
+		compatible = "qcom,msm-rng";
+		reg = <0x10c3000 0x1000>;
+		qcom,no-qrng-config;
+		qcom,no-clock-support;
+	};
+
 	smem: qcom,smem {
 		compatible = "qcom,smem";
 		memory-region = <&smem_mem>;
