--- a/qcom/waipio.dtsi
+++ b/qcom/waipio.dtsi
@@ -1381,6 +1381,11 @@
 		clock-names = "qdss_clk";
 	};
 
+	hyp_core_ctl: qcom,hyp-core-ctl {
+		compatible = "qcom,hyp-core-ctl";
+		status = "ok";
+	};
+
 	eud: qcom,msm-eud@88e0000 {
 		compatible = "qcom,msm-eud";
 		interrupt-names = "eud_irq";
