arm64: configs: mediatek: move ION configs to project defconfig files
ION has been removed from android-mainline. However, we still
need it now. To make it clear, Move the ION config from gki_defconfig
to project defconfig files.

Change-Id: Ibcddb3665522b7eedea325c82543010839ae09a4
Signed-off-by: Miles Chen <miles.chen@mediatek.com>
Feature: [Module]Kernel Maintenance
CR-Id: ALPS05627087

--- a/arch/arm64/configs/k6853v1_64_gki_defconfig
+++ b/arch/arm64/configs/k6853v1_64_gki_defconfig
@@ -142,6 +142,8 @@ CONFIG_MTK_DEVINFO=m
 CONFIG_MTK_DEVMPU=m
 CONFIG_MTK_CM_MGR=m
 CONFIG_MTK_CM_MGR_MT6853=y
+CONFIG_ION=y
+CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_MTK_ION_MM_HEAP=m
 CONFIG_MTK_IOMMU=m
 CONFIG_MTK_IOMMU_MISC=m
