--- a/arch/arm64/configs/k6873v1_64_gki_defconfig
+++ b/arch/arm64/configs/k6873v1_64_gki_defconfig
@@ -125,6 +125,8 @@ CONFIG_MTK_DEVMPU=m
 CONFIG_MTK_SLBC=m
 CONFIG_MTK_CM_MGR=m
 CONFIG_MTK_CM_MGR_MT6873=y
+CONFIG_ION=y
+CONFIG_ION_SYSTEM_HEAP=y
 CONFIG_MTK_ION_MM_HEAP=m
 CONFIG_MTK_IOMMU=m
 CONFIG_MTK_IOMMU_MISC=m
