--- a/qcom/waipio-gpu.dtsi
+++ b/qcom/waipio-gpu.dtsi
@@ -122,14 +122,12 @@
 				reg = <0>;
 				qcom,mempool-page-size = <4096>;
 				qcom,mempool-reserved = <2048>;
-				qcom,mempool-allocate;
 			};
 			/* 8K Page Pool configuration */
 			qcom,gpu-mempool@1 {
 				reg = <1>;
 				qcom,mempool-page-size = <8192>;
 				qcom,mempool-reserved = <1024>;
-				qcom,mempool-allocate;
 			};
 			/* 64K Page Pool configuration */
 			qcom,gpu-mempool@2 {
@@ -137,9 +135,21 @@
 				qcom,mempool-page-size = <65536>;
 				qcom,mempool-reserved = <256>;
 			};
-			/* 1M Page Pool configuration */
+			/* 128K Page Pool configuration */
 			qcom,gpu-mempool@3 {
 				reg = <3>;
+				qcom,mempool-page-size = <131072>;
+				qcom,mempool-reserved = <128>;
+			};
+			/* 256K Page Pool configuration */
+			qcom,gpu-mempool@4 {
+				reg = <4>;
+				qcom,mempool-page-size = <262144>;
+				qcom,mempool-reserved = <80>;
+			};
+			/* 1M Page Pool configuration */
+			qcom,gpu-mempool@5 {
+				reg = <5>;
 				qcom,mempool-page-size = <1048576>;
 				qcom,mempool-reserved = <32>;
 			};
