--- a/drivers/interconnect/qcom/Makefile
+++ b/drivers/interconnect/qcom/Makefile
@@ -14,6 +14,7 @@ qnoc-sm8250-objs			:= sm8250.o
 qnoc-waipio-objs			:= waipio.o
 qnoc-diwali-objs			:= diwali.o
 qnoc-lahaina-objs			:= lahaina.o
+qnoc-neo-objs			:= neo.o
 qnoc-parrot-objs			:= parrot.o
 qnoc-sdxlemur-objs			:= sdxlemur.o
 qnoc-shima-objs				:= shima.o
@@ -31,6 +32,7 @@ obj-$(CONFIG_INTERCONNECT_QCOM_RPMH) += icc-rpmh.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SC7180) += qnoc-sc7180.o
 obj-$(CONFIG_INTERCONNECT_QCOM_SDM845) += qnoc-sdm845.o
 obj-$(CONFIG_INTERCONNECT_QCOM_LAHAINA) += qnoc-lahaina.o
+obj-$(CONFIG_INTERCONNECT_QCOM_NEO) += qnoc-neo.o
 obj-$(CONFIG_INTERCONNECT_QCOM_PARROT) += qnoc-parrot.o
 obj-$(CONFIG_INTERCONNECT_QCOM_WAIPIO) += qnoc-waipio.o
 obj-$(CONFIG_INTERCONNECT_QCOM_DIWALI) += qnoc-diwali.o
