--- a/qcom/neo.dtsi
+++ b/qcom/neo.dtsi
@@ -5,6 +5,8 @@
 #include <dt-bindings/clock/qcom,camcc-neo.h>
 #include <dt-bindings/clock/qcom,dispcc-neo.h>
 #include <dt-bindings/clock/qcom,videocc-neo.h>
+#include <dt-bindings/interconnect/qcom,icc.h>
+#include <dt-bindings/interconnect/qcom,neo.h>
 
 / {
 	model = "Qualcomm Technologies, Inc. NEO";
@@ -307,6 +309,51 @@
 		clock-output-names = "gpucc_clocks";
 		#clock-cells = <1>;
 		#reset-cells = <1>;
+	};
+
+	clk_virt: interconnect@0 {
+		compatible = "qcom,neo-clk_virt";
+		#interconnect-cells = <1>;
+	};
+
+	mc_virt: interconnect@1 {
+		compatible = "qcom,neo-mc_virt";
+		#interconnect-cells = <1>;
+	};
+
+	config_noc: interconnect@1500000 {
+		compatible = "qcom,neo-config_noc";
+		#interconnect-cells = <1>;
+	};
+
+	system_noc: interconnect@1680000 {
+		compatible = "qcom,neo-system_noc";
+		#interconnect-cells = <1>;
+	};
+
+	pcie_noc: interconnect@16c0000 {
+		compatible = "qcom,neo-pcie_anoc";
+		#interconnect-cells = <1>;
+	};
+
+	mmss_noc: interconnect@1740000 {
+		compatible = "qcom,neo-mmss_noc";
+		#interconnect-cells = <1>;
+	};
+
+	gem_noc: interconnect@19100000 {
+		compatible = "qcom,neo-gem_noc";
+		#interconnect-cells = <1>;
+	};
+
+	nsp_noc: interconnect@320C0000 {
+		compatible = "qcom,neo-nsp_noc";
+		#interconnect-cells = <1>;
+	};
+
+	lpass_ag_noc: interconnect@3c40000 {
+		compatible = "qcom,neo-lpass_ag_noc";
+		#interconnect-cells = <1>;
 	};
 };
 
