soc: qcom: Porting VM TLMM access driver for kalama
Adding VM TLMM access driver for kalama.

This is just snapshot of waipio's vm TLMM access driver
'commit 2fcd1327d0e9b6 ("Merge "msm: synx: fix variable
use without initialization"")' from msm-5.10 branch.

Change-Id: I490ab04efd5aa8d95c6f87239f8fabe0bbe16e6b
Signed-off-by: Ashish Bhimanpalliwar <abhiman@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -615,6 +615,15 @@ config QCOM_FSA4480_I2C
 	  for accessing the device, switching between USB and Audio
 	  modes, changing orientation.
 
+config GH_TLMM_VM_MEM_ACCESS
+        tristate "Qualcomm Technologies, Inc. TLMM VM mem access driver"
+        depends on GH_RM_DRV
+        help
+         Qualcomm Technologies, Inc. TLMM VM mem access driver for MSM devices.
+         The drivers provides initial gpio memory access to VM.
+         Say Y here to compile the driver as a part of kernel or M to compile
+         as a module.
+
 source "drivers/soc/qcom/mem_buf/Kconfig"
 
 endmenu
