ARM: dts: msm: Add debug clock controller node for DIWALI
Add debug clock controller support on DIWALI platform to
support clock measurement for all other clock controllers.

Change-Id: I5af1ef6f70047da28bedf5e7ac6a60bd1ae99fc3

--- a/qcom/diwali.dtsi
+++ b/qcom/diwali.dtsi
@@ -854,6 +854,30 @@
 					<&cpufreq_hw 2>;
 	};
 
+	apsscc: syscon@17a80000 {
+		compatible = "syscon";
+		reg = <0x17a80000 0x21000>;
+	};
+
+	mccc: syscon@190ba000 {
+		compatible = "syscon";
+		reg = <0x190ba000 0x54>;
+	};
+
+	debugcc: debug-clock-controller@0 {
+		compatible = "qcom,diwali-debugcc";
+		qcom,gcc = <&gcc>;
+		qcom,videocc = <&videocc>;
+		qcom,dispcc = <&dispcc>;
+		qcom,camcc = <&camcc>;
+		qcom,gpucc = <&gpucc>;
+		qcom,apsscc = <&apsscc>;
+		qcom,mccc = <&mccc>;
+		clock-names = "xo_clk_src";
+		clocks = <&rpmhcc RPMH_CXO_CLK>;
+		#clock-cells = <1>;
+	};
+
 	qcom,msm-rtb {
 		compatible = "qcom,msm-rtb";
 		qcom,rtb-size = <0x100000>;
