--- a/qcom/neo-rumi.dtsi
+++ b/qcom/neo-rumi.dtsi
@@ -10,4 +10,32 @@
 	qcom,wdt@17410000 {
 		status = "disabled";
 	};
+
+	usb_nop_phy: usb_nop_phy {
+		compatible = "usb-nop-xceiv";
+	};
+
+	usb_emuphy: phy@A784000 {
+		compatible = "qcom,usb-emu-phy";
+		reg = <0x0A784000 0x9500>;
+
+		qcom,emu-init-seq = <0xfffff 0x4
+			0xffff3 0x4
+			0xffff0 0x4
+			0x00100000 0x20
+			0x00000000 0x20
+			0x000101F0 0x20
+			0x00100000 0x3c
+			0x00000000 0x3c
+			0x0010060 0x3c
+			0x0 0x4>;
+	};
+};
+
+&usb0 {
+	dwc3@a600000 {
+		usb-phy = <&usb_emuphy>, <&usb_nop_phy>;
+		dr_mode = "peripheral";
+		maximum-speed = "high-speed";
+	};
 };
