ARM: dts: msm: Add support for PM8008 and PM8010 for cape boards
Add device tree files for all cape boards to support using
PM8010 over either I2C or SPMI, or PM8008. Add SPMI debug
nodes for PM8010 and GPIO configurations for reset pins.

Change-Id: Iec12a02a14d25dc873ca40ee04ddd0220274313f

--- a/qcom/cape-cdp-pm8008.dts
+++ b/qcom/cape-cdp-pm8008.dts
@@ -2,9 +2,10 @@
 
 #include "cape.dtsi"
 #include "cape-cdp.dtsi"
+#include "waipio-pm8008.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. Cape CDP";
+	model = "Qualcomm Technologies, Inc. Cape CDP with PM8008";
 	compatible = "qcom,cape-cdp", "qcom,cape", "qcom,cdp";
-	qcom,board-id = <1 0>;
+	qcom,board-id = <0x10001 0>;
 };
