--- a/qcom/Makefile
+++ b/qcom/Makefile
@@ -195,42 +195,47 @@ dtb-$(CONFIG_ARCH_DIWALI) += diwali-rumi.dtb \
 endif
 
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
-dtbo-$(CONFIG_ARCH_CAPE) += cape-mtp-overlay.dtbo \
-	cape-cdp-overlay.dtbo \
-	cape-atp-overlay.dtbo \
-	cape-qrd-overlay.dtbo \
-	cape-v2-mtp-overlay.dtbo \
-	cape-v2-cdp-overlay.dtbo \
-	cape-v2-atp-overlay.dtbo \
-	cape-v2-qrd-overlay.dtbo \
-	capep-mtp-overlay.dtbo \
-	capep-cdp-overlay.dtbo \
-	capep-atp-overlay.dtbo
+dtbo-$(CONFIG_ARCH_CAPE) += cape-mtp-pm8008-overlay.dtbo \
+        cape-cdp-pm8008-overlay.dtbo \
+        cape-atp-pm8008-overlay.dtbo \
+        cape-qrd-pm8008-overlay.dtbo \
+        cape-mtp-pm8010-overlay.dtbo \
+        cape-cdp-pm8010-overlay.dtbo \
+        cape-atp-pm8010-overlay.dtbo \
+        cape-qrd-pm8010-overlay.dtbo \
 
+cape-mtp-pm8008-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-cdp-pm8008-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-atp-pm8008-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-qrd-pm8008-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-mtp-pm8010-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-cdp-pm8010-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-atp-pm8010-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
+cape-qrd-pm8010-overlay.dtbo-base := cape.dtb cape-v2.dtb capep.dtb
 
-cape-mtp-overlay.dtbo-base := cape.dtb
-cape-cdp-overlay.dtbo-base := cape.dtb
-cape-atp-overlay.dtbo-base := cape.dtb
-cape-qrd-overlay.dtbo-base := cape.dtb
-cape-v2-mtp-overlay.dtbo-base := cape-v2.dtb
-cape-v2-cdp-overlay.dtbo-base := cape-v2.dtb
-cape-v2-atp-overlay.dtbo-base := cape-v2.dtb
-cape-v2-qrd-overlay.dtbo-base := cape-v2.dtb
-capep-mtp-overlay.dtbo-base := capep.dtb
-capep-cdp-overlay.dtbo-base := capep.dtb
-capep-atp-overlay.dtbo-base := capep.dtb
 else
-dtb-$(CONFIG_ARCH_CAPE) += cape-mtp.dtb \
-        cape-cdp.dtb \
-        cape-atp.dtb \
-        cape-qrd.dtb \
-        cape-v2-mtp.dtb \
-        cape-v2-cdp.dtb \
-        cape-v2-atp.dtb \
-        cape-v2-qrd.dtb \
-	capep-mtp.dtb \
-	capep-cdp.dtb \
-	capep-atp.dtb
+dtb-$(CONFIG_ARCH_CAPE) += cape-mtp-pm8008.dtb \
+        cape-cdp-pm8008.dtb \
+        cape-atp-pm8008.dtb \
+        cape-qrd-pm8008.dtb \
+        cape-v2-mtp-pm8008.dtb \
+        cape-v2-cdp-pm8008.dtb \
+        cape-v2-atp-pm8008.dtb \
+        cape-v2-qrd-pm8008.dtb \
+	capep-mtp-pm8008.dtb \
+	capep-cdp-pm8008.dtb \
+	capep-atp-pm8008.dtb \
+        cape-mtp-pm8010.dtb \
+        cape-cdp-pm8010.dtb \
+        cape-atp-pm8010.dtb \
+        cape-qrd-pm8010.dtb \
+        cape-v2-mtp-pm8010.dtb \
+        cape-v2-cdp-pm8010.dtb \
+        cape-v2-atp-pm8010.dtb \
+        cape-v2-qrd-pm8010.dtb \
+	capep-mtp-pm8010.dtb \
+	capep-cdp-pm8010.dtb \
+	capep-atp-pm8010.dtb
 endif
 
 ifeq ($(CONFIG_BUILD_ARM64_DT_OVERLAY),y)
