--- a/qcom/cape-atp-pm8008.dts
+++ b/qcom/cape-atp-pm8008.dts
@@ -2,9 +2,10 @@
 
 #include "cape.dtsi"
 #include "cape-atp.dtsi"
+#include "waipio-pm8008.dtsi"
 
 / {
-	model = "Qualcomm Technologies, Inc. Cape ATP";
+	model = "Qualcomm Technologies, Inc. Cape ATP with PM8008";
 	compatible = "qcom,cape-atp", "qcom,cape", "qcom,atp";
-	qcom,board-id = <33 0>;
+	qcom,board-id = <0x10021 0>;
 };
