ARM: dts: msm: Add TLMM VM mem access driver DT node for Diwali
Add device tree support for TLMM VM memory access driver
for Diwali SOC.

Change-Id: I6bcf056ada4941a8c9fac235e7df7cb4c15aaf0b

--- a/qcom/diwali-vm.dtsi
+++ b/qcom/diwali-vm.dtsi
@@ -180,6 +180,18 @@
 					allocate-base;
 				};
 			};
+
+			gpiomem0 {
+				vdevice-type = "iomem";
+				patch = "/soc/tlmm-vm-mem-access";
+				push-compatible = "qcom,tlmm-vm-mem-access";
+				peer-default;
+				memory {
+					qcom,label = <0x8>;
+					qcom,mem-info-tag = <0x2>;
+					allocate-base;
+				};
+			};
 		};
 	};
 
@@ -221,6 +233,11 @@
 			     <GIC_PPI 11 (GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>,
 			     <GIC_PPI 12 (GIC_CPU_MASK_SIMPLE(8) | IRQ_TYPE_LEVEL_LOW)>;
 		clock-frequency = <19200000>;
+	};
+
+	tlmm-vm-mem-access {
+		compatible = "qcom,tlmm-vm-mem-access";
+		tlmm-vm-gpio-list = <>;
 	};
 
 	vm_tlmm_irq: vm-tlmm-irq@0 {
