--- a/build.targets
+++ b/build.targets
@@ -2,3 +2,4 @@ build.config.msm.kalama
 build.config.msm.waipio
 build.config.msm.cinder
 build.config.msm.kalama.tuivm
+build.config.msm.waipio.tuivm
