ARM: dts: msm: Add coresight and debug components for cape
Add coresight device tree nodes to support etf/etr/stm/etm/cti/tpdm/tgu
functions. Add debug device tree nodes to support DCC and memory dump
functions.

Change-Id: Ie96b0d39453031bfef0ad1877db2152ec85fae7e

--- a/qcom/cape-pinctrl.dtsi
+++ b/qcom/cape-pinctrl.dtsi
@@ -233,6 +233,19 @@
 		};
 	};
 
+	trigout_a: trigout_a {
+		mux {
+			pins = "gpio2";
+			function = "qdss_cti";
+		};
+
+		config {
+			pins = "gpio2";
+			drive-strength = <2>;
+			bias-disable;
+		};
+	};
+
 	pri_tdm_clk {
 		pri_tdm_clk_sleep: pri_tdm_clk_sleep {
 			mux {
