ARM: dts: msm: Add smcinvoke/tee-shared-memory-bridge node for Diwali-vm
Add smcinvoke/tee-shared-memory-bridge node for Diwali-vm.

Change-Id: I90939c8dacfe2f925d2114e6b76dc4f9b68985cf

--- a/qcom/diwali-vm.dtsi
+++ b/qcom/diwali-vm.dtsi
@@ -259,6 +259,15 @@
 		gpios = /bits/ 16 <>;
 	};
 
+	qcom_smcinvoke {
+		compatible = "qcom,smcinvoke";
+	};
+
+	qtee_shmbridge {
+		compatible = "qcom,tee-shared-memory-bridge";
+		qcom,custom-bridge-size = <512>;
+		qcom,support-hypervisor;
+	};
 };
 
 #include "waipio-vm-dma-heaps.dtsi"
