ARM: dts: msm: Enable ramoops node on Cape Platform
Enable ramoops node on Cape Platform.

Change-Id: I2fbc45ae79d94d3311d34af156562582c2fabede

--- a/qcom/cape.dtsi
+++ b/qcom/cape.dtsi
@@ -999,6 +999,14 @@
 		qcom,config-arr = <0x17800060 0x17810060 0x17820060 0x17830060
 			0x17840060 0x17850060 0x17860060 0x17870060>;
 	};
+
+	ramoops_mem: ramoops_region {
+		compatible = "ramoops";
+		alloc-ranges = <0x0 0x00000000 0xffffffff 0xffffffff>;
+		size = <0x0 0x200000>;
+		pmsg-size = <0x200000>;
+		mem-type = <2>;
+	};
 };
 
 &clock_gcc {
