ARM: dts: msm: Add nopmi support for diwali
Add nopmi support for IDP and QRD platforms on diwali.

Change-Id: Ife49363d3a4cda2e5b86790cdab169432850ac77

--- a/qcom/diwali-atp.dts
+++ b/qcom/diwali-atp.dts
@@ -7,4 +7,6 @@
 	model = "Qualcomm Technologies, Inc. Diwali ATP";
 	compatible = "qcom,diwali-atp", "qcom,diwali", "qcom,atp";
 	qcom,board-id = <33 0>;
+	qcom,pmic-id-size = <9>;
+	qcom,pmic-id = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x2E>;
 };
