--- a/qcom/diwali-atp.dtsi
+++ b/qcom/diwali-atp.dtsi
@@ -1,6 +1,7 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
 
+#include "diwali-pm7250b.dtsi"
 #include "diwali-pmic-overlay.dtsi"
 
 &soc {
