--- a/qcom/diwali-idp-nopmi-overlay.dts
+++ b/qcom/diwali-idp-nopmi-overlay.dts
@@ -1,11 +1,13 @@
 /dts-v1/;
 /plugin/;
 
-#include "diwali-idp-nopmi.dtsi"
+#include "diwali-idp.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. Diwali IDP NOPMI";
 	compatible = "qcom,diwali-idp", "qcom,diwali", "qcom,idp";
 	qcom,msm-id = <506 0x10000>;
 	qcom,board-id = <34 0>;
+	qcom,pmic-id-size = <9>;
+	qcom,pmic-id = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0>;
 };
