--- a/qcom/diwali-idp-overlay.dts
+++ b/qcom/diwali-idp-overlay.dts
@@ -2,10 +2,13 @@
 /plugin/;
 
 #include "diwali-idp.dtsi"
+#include "diwali-idp-pm7250b.dtsi"
 
 / {
 	model = "Qualcomm Technologies, Inc. Diwali IDP";
 	compatible = "qcom,diwali-idp", "qcom,diwali", "qcom,idp";
 	qcom,msm-id = <506 0x10000>;
 	qcom,board-id = <34 0>;
+	qcom,pmic-id-size = <9>;
+	qcom,pmic-id = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x2E>;
 };
