--- a/qcom/diwali-idp-usbc-overlay.dts
+++ b/qcom/diwali-idp-usbc-overlay.dts
@@ -8,4 +8,6 @@
 	compatible = "qcom,diwali-idp", "qcom,diwali", "qcom,idp";
 	qcom,msm-id = <506 0x10000>;
 	qcom,board-id = <34 1>;
+	qcom,pmic-id-size = <9>;
+	qcom,pmic-id = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x2E>;
 };
