--- a/qcom/diwali-idp-usbc.dts
+++ b/qcom/diwali-idp-usbc.dts
@@ -7,4 +7,6 @@
 	model = "Qualcomm Technologies, Inc. Diwali IDP USBC audio";
 	compatible = "qcom,diwali-idp", "qcom,diwali", "qcom,idp";
 	qcom,board-id = <34 1>;
+	qcom,pmic-id-size = <9>;
+	qcom,pmic-id = <0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x0 0x2E>;
 };
