ARM: dts: qcom: Add llcc node & binding change for CAPE
Add llcc node & binding change for CAPE.

Change-Id: I4e971a45b41d7e29338ffef2f69a38c65445f3ad

--- a/qcom/cape.dtsi
+++ b/qcom/cape.dtsi
@@ -1577,6 +1577,13 @@
 		};
 	};
 
+	cache-controller@19200000 {
+		compatible = "qcom,cape-llcc", "qcom,llcc-v21";
+		reg = <0x19200000 0x580000> , <0x19a00000 0x80000>;
+		reg-names = "llcc_base", "llcc_broadcast_base";
+		interrupts = <GIC_SPI 266 IRQ_TYPE_LEVEL_HIGH>;
+		cap-based-alloc-and-pwr-collapse;
+	};
 };
 
 &clock_gcc {
