--- a/qcom/diwali-qrd.dtsi
+++ b/qcom/diwali-qrd.dtsi
@@ -2,7 +2,7 @@
 #include <dt-bindings/input/input.h>
 
 #include "diwali-pmic-overlay.dtsi"
-
+#include "diwali-thermal-overlay.dtsi"
 &soc {
 	qcom,userspace-cdev {
 		display-fps {
