ARM: dts: msm: Enable rmtfs for Parrot
Add rmtfs properties to enable remote storage access for Parrot.

Change-Id: I243a67971fb3217a9b0a8f735824c4fb5c5b4118

--- a/qcom/parrot.dtsi
+++ b/qcom/parrot.dtsi
@@ -397,6 +397,13 @@
 		#clock-cells = <1>;
 		#reset-cells = <1>;
 	};
+
+	qcom,rmtfs_sharedmem@0 {
+		compatible = "qcom,sharedmem-uio";
+		reg = <0x0 0x280000>;
+		reg-names = "rmtfs";
+		qcom,client-id = <0x00000001>;
+	};
 };
 
 #include "diwali-gdsc.dtsi"
