ARM: dts: msm: Add fps and adaptive hdr entry for diwali
Add fps detection entry and adaptive hdr detection
entry for diwali.

Change-Id: I434781dc68c2777ec56a1505e08a6f185cad5447

--- a/qcom/diwali.dtsi
+++ b/qcom/diwali.dtsi
@@ -1900,6 +1900,14 @@
 			reg = <0x117 0x1>;
 			bits = <2 6>;
 		};
+
+		feat_conf12: feat_conf12@0130 {
+			reg = <0x0130 0x4>;
+		};
+
+		feat_conf13: feat_conf13@0134 {
+			reg = <0x0134 0x4>;
+		};
 	};
 
 	qfprom_sys: qfprom@0 {
