ARM: dts: msm: Add USB related configuration for Cape
This change adds USB controller and phy related configuration
for Cape.

Change-Id: I17ac1cdabb0a5cd71e76e82564e84d1c835b7be6

--- a/qcom/cape.dtsi
+++ b/qcom/cape.dtsi
@@ -2612,6 +2612,7 @@
 #include "cape-dma-heaps.dtsi"
 #include "cape-gpu.dtsi"
 #include "cape-thermal.dtsi"
+#include "cape-usb.dtsi"
 
 &qupv3_se7_2uart {
 	status = "ok";
