--- a/qcom/diwali-reserved-memory.dtsi
+++ b/qcom/diwali-reserved-memory.dtsi
@@ -69,24 +69,24 @@
 		reg = <0x0 0x82a00000 0x0 0xc00000>;
 	};
 
-	camera_mem: camera_region@85200000 {
+	camera_mem: camera_region@84e00000 {
 		no-map;
-		reg = <0x0 0x85200000 0x0 0x500000>;
+		reg = <0x0 0x84e00000 0x0 0x500000>;
 	};
 
-	wpss_mem: wpss_region@85700000 {
+	wpss_mem: wpss_region@85300000 {
 		no-map;
-		reg = <0x0 0x85700000 0x0 0x1900000>;
+		reg = <0x0 0x85300000 0x0 0x1900000>;
 	};
 
-	video_mem: video_region@87000000 {
+	video_mem: video_region@86c00000 {
 		no-map;
-		reg = <0x0 0x87000000 0x0 0x700000>;
+		reg = <0x0 0x86c00000 0x0 0x700000>;
 	};
 
-	adsp_mem: adsp_region@87700000 {
+	adsp_mem: adsp_region@87300000 {
 		no-map;
-		reg = <0x0 0x87700000 0x0 0x2400000>;
+		reg = <0x0 0x87300000 0x0 0x2800000>;
 	};
 
 	cdsp_mem: cdsp_region@89b00000 {
