pause: port the users of pause
Port the users of pause from the 5.10 kernel to ensure code is up to date.

Change-Id: Ibe52cc37e0dca425f2f472b9cf254a2453bd9c47
Signed-off-by: Stephen Dickey <dickey@codeaurora.org>

--- a/drivers/thermal/qcom/Kconfig
+++ b/drivers/thermal/qcom/Kconfig
@@ -41,3 +41,14 @@ config QCOM_LMH
 	  input from temperature and current sensors.  On many newer Qualcomm SoCs
 	  LMh is configured in the firmware and this feature need not be enabled.
 	  However, on certain SoCs like sdm845 LMh has to be configured from kernel.
+
+config QTI_CPU_PAUSE_COOLING_DEVICE
+	tristate "QTI CPU Pause cooling devices"
+	depends on THERMAL_OF && HOTPLUG_CPU
+	depends on ARCH_QCOM || COMPILE_TEST
+	help
+	   This enables the QTI CPU Pause cooling device. These cooling
+	   devices will be used by QTI chipset to pause a CPU from being
+	   scheduled and hence will let the CPU to power collapse.  Pausing
+	   a CPU will be used when the CPU frequency mitigation
+	   is not good enough to achieve the necessary cooling.
