--- a/qcom/cape.dtsi
+++ b/qcom/cape.dtsi
@@ -1046,6 +1046,7 @@
 #include "cape-regulators.dtsi"
 #include "msm-arm-smmu-waipio.dtsi"
 #include "cape-dma-heaps.dtsi"
+#include "cape-gpu.dtsi"
 
 &qupv3_se7_2uart {
 	status = "ok";
