ARM: dts: msm: Add GICv3 ITS node for cape
Add GICv3 ITS node. The ITS block is used to translate
PCIe MSI to LPI interrupt.

Change-Id: Ic3c17149ea67441b18682f14db5d3e7e9e3a1e8f

--- a/qcom/cape.dtsi
+++ b/qcom/cape.dtsi
@@ -433,11 +433,19 @@
 		compatible = "arm,gic-v3";
 		#interrupt-cells = <3>;
 		interrupt-controller;
+		ranges;
 		#redistributor-regions = <1>;
 		redistributor-stride = <0x0 0x40000>;
 		reg = <0x17100000 0x10000>,	/* GICD */
 		      <0x17180000 0x200000>;	/* GICR * 8 */
 		interrupts = <GIC_PPI 9 IRQ_TYPE_LEVEL_LOW>;
+
+		gic_its: msi-controller@17140000 {
+			compatible = "arm,gic-v3-its";
+			msi-controller;
+			#msi-cells = <1>;
+			reg = <0x17140000 0x20000>;
+		};
 	};
 
 	tlmm: pinctrl@f000000 {
