leds: Add Kconfig for LEDS_QPNP_VIBRATOR_LDO
Add Kconfig to enable vibrator LDO driver.

Change-Id: I0a8856cbdd3d30d6df192ee1a16e503620976f83
Signed-off-by: Ashish Chavan <ashichav@codeaurora.org>

--- a/drivers/leds/Kconfig
+++ b/drivers/leds/Kconfig
@@ -967,6 +967,14 @@ config LEDS_ACER_A500
 	  This option enables support for the Power Button LED of
 	  Acer Iconia Tab A500.
 
+config LEDS_QPNP_VIBRATOR_LDO
+	tristate "Vibrator-LDO support for QPNP PMIC"
+	depends on LEDS_CLASS && MFD_SPMI_PMIC
+	help
+	  This option enables device driver support for the vibrator-ldo
+	  peripheral found on Qualcomm Technologies, Inc. QPNP PMICs.
+	  The vibrator-ldo peripheral is capable of driving ERM vibrators.
+
 comment "LED Triggers"
 source "drivers/leds/trigger/Kconfig"
 
