ARM: dts: msm: Add PCIe Root port configuration for diwali
Add initial devicetree nodes and entries to support
PCIe RC0 port configuration on diwali.

Change-Id: I854cace2af9a7dfeeca0731986fbf672787606f9

--- a/qcom/diwali.dtsi
+++ b/qcom/diwali.dtsi
@@ -2760,6 +2760,7 @@
 #include "diwali-gdsc.dtsi"
 #include "ipcc-test-diwali.dtsi"
 #include "msm-arm-smmu-diwali.dtsi"
+#include "diwali-pcie.dtsi"
 
 &qupv3_se5_2uart {
 	status = "ok";
