--- a/qcom/cape-qrd.dtsi
+++ b/qcom/cape-qrd.dtsi
@@ -1,6 +1,5 @@
 #include <dt-bindings/gpio/gpio.h>
 #include <dt-bindings/input/input.h>
-
 #include "cape-pmic-overlay.dtsi"
 
 &soc {
@@ -21,6 +20,32 @@
 			linux,can-disable;
 		};
 	};
+};
+
+&ufsphy_mem {
+	compatible = "qcom,ufs-phy-qmp-v4-waipio";
+
+	vdda-phy-supply = <&L5B>;
+	vdda-pll-supply = <&L10C>;
+	vdda-phy-max-microamp = <197000>;
+	vdda-pll-max-microamp = <23700>;
+
+	status = "ok";
+};
+
+&ufshc_mem {
+	vdd-hba-supply = <&gcc_ufs_phy_gdsc>;
+
+	vcc-supply = <&L7B>;
+	vcc-max-microamp = <1100000>;
+
+	vccq-supply = <&L9B>;
+	vccq-max-microamp = <1200000>;
+
+	qcom,vddp-ref-clk-supply = <&L9B>;
+	qcom,vddp-ref-clk-max-microamp = <100>;
+
+	status = "ok";
 };
 
 &pm8350b_haptics {
