ARM: dts: msm: Add proper gpio function names for cape
Add proper gpio function names for cape.

Change-Id: Ia38a74ff31e779eafddd07d2888278db186735d4

--- a/qcom/cape-pinctrl.dtsi
+++ b/qcom/cape-pinctrl.dtsi
@@ -17,7 +17,7 @@
 		pri_aux_pcm_clk_active: pri_aux_pcm_clk_active {
 			mux {
 				pins = "gpio126";
-				function = "mi2s0_sck";
+				function = "i2s0_sck";
 			};
 
 			config {
@@ -47,7 +47,7 @@
 		pri_aux_pcm_sync_active: pri_aux_pcm_sync_active {
 			mux {
 				pins = "gpio129";
-				function = "mi2s0_ws";
+				function = "i2s0_ws";
 			};
 
 			config {
@@ -77,7 +77,7 @@
 		pri_aux_pcm_din_active: pri_aux_pcm_din_active {
 			mux {
 				pins = "gpio127";
-				function = "mi2s0_data0";
+				function = "i2s0_data0";
 			};
 
 			config {
@@ -106,7 +106,7 @@
 		pri_aux_pcm_dout_active: pri_aux_pcm_dout_active {
 			mux {
 				pins = "gpio128";
-				function = "mi2s0_data1";
+				function = "i2s0_data1";
 			};
 
 			config {
@@ -135,7 +135,7 @@
 		tert_aux_pcm_clk_active: tert_aux_pcm_clk_active {
 			mux {
 				pins = "gpio121";
-				function = "mi2s2_sck";
+				function = "i2s2_sck";
 			};
 
 			config {
@@ -163,7 +163,7 @@
 		tert_aux_pcm_ws_active: tert_aux_pcm_ws_active {
 			mux {
 				pins = "gpio123";
-				function = "mi2s2_ws";
+				function = "i2s2_ws";
 			};
 
 			config {
@@ -193,7 +193,7 @@
 		tert_aux_pcm_din_active: tert_aux_pcm_din_active {
 			mux {
 				pins = "gpio122";
-				function = "mi2s2_data0";
+				function = "i2s2_data0";
 			};
 
 			config {
@@ -222,7 +222,7 @@
 		tert_aux_pcm_dout_active: tert_aux_pcm_dout_active {
 			mux {
 				pins = "gpio124";
-				function = "mi2s2_data1";
+				function = "i2s2_data1";
 			};
 
 			config {
@@ -251,7 +251,7 @@
 		pri_tdm_clk_active: pri_tdm_clk_active {
 			mux {
 				pins = "gpio126";
-				function = "mi2s0_sck";
+				function = "i2s0_sck";
 			};
 
 			config {
@@ -281,7 +281,7 @@
 		pri_tdm_sync_active: pri_tdm_sync_active {
 			mux {
 				pins = "gpio129";
-				function = "mi2s0_ws";
+				function = "i2s0_ws";
 			};
 
 			config {
@@ -311,7 +311,7 @@
 		pri_tdm_din_active: pri_tdm_din_active {
 			mux {
 				pins = "gpio127";
-				function = "mi2s0_data0";
+				function = "i2s0_data0";
 			};
 
 			config {
@@ -340,7 +340,7 @@
 		pri_tdm_dout_active: pri_tdm_dout_active {
 			mux {
 				pins = "gpio128";
-				function = "mi2s0_data1";
+				function = "i2s0_data1";
 			};
 
 			config {
@@ -369,7 +369,7 @@
 		tert_tdm_clk_active: tert_tdm_clk_active {
 			mux {
 				pins = "gpio121";
-				function = "mi2s2_sck";
+				function = "i2s2_sck";
 			};
 
 			config {
@@ -397,7 +397,7 @@
 		tert_tdm_ws_active: tert_tdm_ws_active {
 			mux {
 				pins = "gpio123";
-				function = "mi2s2_ws";
+				function = "i2s2_ws";
 			};
 
 			config {
@@ -427,7 +427,7 @@
 		tert_tdm_din_active: tert_tdm_din_active {
 			mux {
 				pins = "gpio122";
-				function = "mi2s2_data0";
+				function = "i2s2_data0";
 			};
 
 			config {
@@ -456,7 +456,7 @@
 		tert_tdm_dout_active: tert_tdm_dout_active {
 			mux {
 				pins = "gpio124";
-				function = "mi2s2_data1";
+				function = "i2s2_data1";
 			};
 
 			config {
@@ -485,7 +485,7 @@
 		pri_mi2s_mclk_active: pri_mi2s_mclk_active {
 			mux {
 				pins = "gpio125";
-				function = "pri_mi2s";
+				function = "pri_i2s";
 			};
 
 			config {
@@ -515,7 +515,7 @@
 		pri_mi2s_sck_active: pri_mi2s_sck_active {
 			mux {
 				pins = "gpio126";
-				function = "mi2s0_sck";
+				function = "i2s0_sck";
 			};
 
 			config {
@@ -545,7 +545,7 @@
 		pri_mi2s_ws_active: pri_mi2s_ws_active {
 			mux {
 				pins = "gpio129";
-				function = "mi2s0_ws";
+				function = "i2s0_ws";
 			};
 
 			config {
@@ -575,7 +575,7 @@
 		pri_mi2s_sd0_active: pri_mi2s_sd0_active {
 			mux {
 				pins = "gpio127";
-				function = "mi2s0_data0";
+				function = "i2s0_data0";
 			};
 
 			config {
@@ -605,7 +605,7 @@
 		pri_mi2s_sd1_active: pri_mi2s_sd1_active {
 			mux {
 				pins = "gpio128";
-				function = "mi2s0_data1";
+				function = "i2s0_data1";
 			};
 
 			config {
@@ -635,7 +635,7 @@
 		sec_mi2s_mclk_active: sec_mi2s_mclk_active {
 			mux {
 				pins = "gpio124";
-				function = "sec_mi2s";
+				function = "sec_i2s";
 			};
 
 			config {
@@ -665,7 +665,7 @@
 		tert_mi2s_sck_active: tert_mi2s_sck_active {
 			mux {
 				pins = "gpio121";
-				function = "mi2s2_sck";
+				function = "i2s2_sck";
 			};
 
 			config {
@@ -694,7 +694,7 @@
 		tert_mi2s_ws_active: tert_mi2s_ws_active {
 			mux {
 				pins = "gpio123";
-				function = "mi2s2_ws";
+				function = "i2s2_ws";
 			};
 
 			config {
@@ -723,7 +723,7 @@
 		tert_mi2s_sd0_active: tert_mi2s_sd0_active {
 			mux {
 				pins = "gpio122";
-				function = "mi2s2_data0";
+				function = "i2s2_data0";
 			};
 
 			config {
@@ -752,7 +752,7 @@
 		tert_mi2s_sd1_active: tert_mi2s_sd1_active {
 			mux {
 				pins = "gpio124";
-				function = "mi2s2_data1";
+				function = "i2s2_data1";
 			};
 
 			config {
@@ -760,34 +760,6 @@
 				drive-strength = <8>;   /* 8 mA */
 				bias-disable;           /* NO PULL */
 			};
-		};
-	};
-
-	pm8008i_active: pm8008i_active {
-		mux {
-			pins = "gpio7";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio7";
-			bias-disable;
-			output-high;
-			drive-strength = <2>;
-		};
-	};
-
-	pm8008j_active: pm8008j_active {
-		mux {
-			pins = "gpio11";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio11";
-			bias-disable;
-			output-high;
-			drive-strength = <2>;
 		};
 	};
 
