ARM: dts: msm: Add dtsi entry for ssg hlos drivers
The following changes are added:
1. Add qseecom node for cape
2. Add qcrypto device for cape.
3. Enable QRNG driver for cape.
4. Add shmbridge node for cape.
5. Add smcinvoke node for cape.
6. Add tz_log node for cape.
7. Add qcedev node for cape.

Change-Id: Ic905e7e67db2e18dfd228933c17e101fd4b0dcff

--- a/qcom/cape-dma-heaps.dtsi
+++ b/qcom/cape-dma-heaps.dtsi
@@ -11,5 +11,22 @@
 			qcom,token = <0x20000000>;
 		};
 
+		qcom,user_contig {
+			qcom,dma-heap-name = "qcom,user-contig";
+			qcom,dma-heap-type = <HEAP_TYPE_CMA>;
+			memory-region = <&user_contig_mem>;
+		};
+
+		qcom,qseecom {
+			qcom,dma-heap-name = "qcom,qseecom";
+			qcom,dma-heap-type = <HEAP_TYPE_CMA>;
+			memory-region = <&qseecom_mem>;
+		};
+
+		qcom,qseecom_ta {
+			qcom,dma-heap-name = "qcom,qseecom-ta";
+			qcom,dma-heap-type = <HEAP_TYPE_CMA>;
+			memory-region = <&qseecom_ta_mem>;
+		};
 	};
 };
